ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Allocations__c/CnP_PaaS__Allocations__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Allocations</label>
    <nameField>
        <label>Allocations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>