ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Allocations__c/fields/CnP_PaaS__Amount__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Amount__c</fullName>
    <label>C&amp;P Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>