ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Allocations__c/fields/CnP_PaaS__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>C&amp;P Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>