ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Allocations__c/fields/CnP_PaaS__Sub_Class__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Sub_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Sub Class</label>
    <referenceTo>CnP_PaaS__Sub_Class__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>